openshift/date.yaml
---

apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: date
  name: date
spec:
  replicas: 3
  selector:
    app: date
    deploymentconfig: date
  strategy:
    type: Rolling
  template:
    metadata:
      labels:
        app: date
        deploymentconfig: date
    spec:
      containers:
      - image: 172.30.1.1:5000/datetimeweb/date:1.0.0
        imagePullPolicy: IfNotPresent
        name: date
        ports:
        - containerPort: 7001
          protocol: TCP
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - date
      from:
        kind: ImageStreamTag
        name: date:1.0.0
    type: ImageChange


---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: date
  name: date
spec:
  ports:
  - name: 7001-tcp
    port: 7001
    protocol: TCP
    targetPort: 7001
  selector:
    app: date
    deploymentconfig: date
  sessionAffinity: None
  type: ClusterIP
