openshift/time.yaml
---

apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: time
  name: time
spec:
  replicas: 3
  selector:
    app: time
    deploymentconfig: time
  strategy:
    type: Rolling
  template:
    metadata:
      labels:
        app: time
        deploymentconfig: time
    spec:
      containers:
      - image: 172.30.1.1:5000/datetimeweb/time:1.0.0
        imagePullPolicy: IfNotPresent
        name: time
        ports:
        - containerPort: 7002
          protocol: TCP
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - time
      from:
        kind: ImageStreamTag
        name: time:1.0.0
    type: ImageChange


---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: time
  name: time
spec:
  ports:
  - name: 7002-tcp
    port: 7002
    protocol: TCP
    targetPort: 7002
  selector:
    app: time
    deploymentconfig: time
  sessionAffinity: None
  type: ClusterIP
