openshift/web.yaml
---

apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: web
  name: web
spec:
  replicas: 3
  selector:
    app: web
    deploymentconfig: web
  strategy:
    type: Rolling
  template:
    metadata:
      labels:
        app: web
        deploymentconfig: web
    spec:
      containers:
      - image: 172.30.1.1:5000/datetimeweb/web:1.0.0
        imagePullPolicy: IfNotPresent
        name: web
        ports:
        - containerPort: 7000
          protocol: TCP
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - web
      from:
        kind: ImageStreamTag
        name: web:1.0.0
    type: ImageChange


---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web
spec:
  ports:
  - name: 7000-tcp
    port: 7000
    protocol: TCP
    targetPort: 7000
  selector:
    app: web
    deploymentconfig: web
  sessionAffinity: None
  type: ClusterIP
