openshift/web-route.yaml
---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: web
  name: web
spec:
  port:
    targetPort: 7000-tcp
  to:
    kind: Service
    name: web
    weight: 100
  wildcardPolicy: None
